[gd_scene load_steps=7 format=3 uid="uid://cy3360w1huhbk"]

[ext_resource type="Texture2D" uid="uid://cd5alpr7lvkhe" path="res://assets/tank.png" id="1_3el6y"]
[ext_resource type="Script" path="res://player.gd" id="1_wt4w1"]
[ext_resource type="Texture2D" uid="uid://cxaj02b7kmw4j" path="res://assets/light.png" id="3_h0gc7"]
[ext_resource type="PackedScene" uid="uid://bm6effwt4a5pp" path="res://gun_controller.tscn" id="4_igc43"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_quy2g"]
size = Vector2(16, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_n7f4r"]
size = Vector2(18, 18)

[node name="player" type="CharacterBody2D" groups=["player"]]
collision_layer = 2
collision_mask = 5
script = ExtResource("1_wt4w1")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_quy2g")

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(0.972549, 0.941176, 0.533333, 1)
self_modulate = Color(0.972549, 0.941176, 0.533333, 1)
texture = ExtResource("1_3el6y")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_n7f4r")

[node name="PointLight2D" type="PointLight2D" parent="."]
color = Color(0.121569, 0.25098, 0.231373, 1)
energy = 2.0
shadow_enabled = true
texture = ExtResource("3_h0gc7")
texture_scale = 2.0

[node name="WeaponMountPoint" type="Marker2D" parent="."]
position = Vector2(13, 0)

[node name="GunController" parent="." instance=ExtResource("4_igc43")]

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
